[gd_scene load_steps=3 format=3 uid="uid://b7nclbgkw6veg"]

[ext_resource type="Script" uid="uid://mpiigeysorux" path="res://scripts/ui/debug_hud.gd" id="1_88p7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.5)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 1, 1, 0.8)

[node name="MatchDebugHud" type="CanvasLayer"]
layer = 128
script = ExtResource("1_88p7u")

[node name="DebugHud" type="PanelContainer" parent="."]
offset_right = 400.0
offset_bottom = 350.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="TabContainer" type="TabContainer" parent="DebugHud"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
tab_alignment = 0

[node name="Performance" type="VBoxContainer" parent="DebugHud/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VBox" type="VBoxContainer" parent="DebugHud/TabContainer/Performance"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="FPS" type="HBoxContainer" parent="DebugHud/TabContainer/Performance/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Performance/VBox/FPS"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "FPS:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Performance/VBox/FPS"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "0"

[node name="FrameTime" type="HBoxContainer" parent="DebugHud/TabContainer/Performance/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Performance/VBox/FrameTime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Frame:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Performance/VBox/FrameTime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "0.00 ms"

[node name="Match" type="VBoxContainer" parent="DebugHud/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VBox" type="VBoxContainer" parent="DebugHud/TabContainer/Match"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="State" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/State"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "State:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/State"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "IDLE"

[node name="Server" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/Server"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Server:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/Server"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Player"

[node name="ServeZone" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/ServeZone"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "ServeZ:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/ServeZone"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "BACK"

[node name="RallyZone" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/RallyZone"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "RallyZ:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/RallyZone"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "BACK"

[node name="GroundContacts" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/GroundContacts"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Ground:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/GroundContacts"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "0"

[node name="LastHitter" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/LastHitter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "LastHit:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/LastHitter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "None"

[node name="RallyLength" type="HBoxContainer" parent="DebugHud/TabContainer/Match/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Match/VBox/RallyLength"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Rally:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Match/VBox/RallyLength"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "0"

[node name="Player0" type="VBoxContainer" parent="DebugHud/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VBox" type="VBoxContainer" parent="DebugHud/TabContainer/Player0"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Name" type="HBoxContainer" parent="DebugHud/TabContainer/Player0/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Name:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Player"

[node name="Position" type="HBoxContainer" parent="DebugHud/TabContainer/Player0/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Pos:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "0.00, 0.00"

[node name="Velocity" type="HBoxContainer" parent="DebugHud/TabContainer/Player0/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Vel:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player0/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "0.00"

[node name="Player1" type="VBoxContainer" parent="DebugHud/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VBox" type="VBoxContainer" parent="DebugHud/TabContainer/Player1"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Name" type="HBoxContainer" parent="DebugHud/TabContainer/Player1/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Name:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Player"

[node name="Position" type="HBoxContainer" parent="DebugHud/TabContainer/Player1/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Pos:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "0.00, 0.00"

[node name="Velocity" type="HBoxContainer" parent="DebugHud/TabContainer/Player1/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Vel:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Player1/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "0.00"

[node name="Ball" type="VBoxContainer" parent="DebugHud/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VBox" type="VBoxContainer" parent="DebugHud/TabContainer/Ball"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Position" type="HBoxContainer" parent="DebugHud/TabContainer/Ball/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Ball/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Pos:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Ball/VBox/Position"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "0.00, 0.00"

[node name="Velocity" type="HBoxContainer" parent="DebugHud/TabContainer/Ball/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/TabContainer/Ball/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "Vel:"

[node name="Value" type="Label" parent="DebugHud/TabContainer/Ball/VBox/Velocity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "0.00"

[node name="TrajectoryToggle" type="CheckButton" parent="DebugHud/TabContainer/Ball/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Draw Trajectory"
